# eegfmri-pipeline

./: .editorconfig  .gitattributes  .gitignore  CLI_OPTIONS.md  LICENSE  Makefile  README.md  eeg_to_signature_shallow_models.py  organize_ml.py  pyproject.toml  pytest.ini  requirements.txt  test_detect.py
.codex/environments/: environment.toml
.cursor/: worktrees.json
.eeg-pipeline/: history.json
.github/workflows/: ci.yml  real-data-smoke.yml
.matplotlib/: fontlist-v390.json
README/: FMRI_RAW_TO_BIDS.md  SOURCE_LOCALIZATION_TUTORIAL.md
analysis/behavior/: exports.py  power_roi.py
analysis/decoding/: permutation.py  time_generalization.py
analysis/features/: __init__.py  aperiodic.py  microstates.py  plateau.py
analysis/group/: __init__.py
docs/: config_reference.yaml  feature_extraction_improvements.md  index.md
docs/architecture/: README.md  adr-0001-module-boundaries.md
docs/eeg/: index.md  source-localization.md
docs/fmri/: index.md  raw-to-bids.md
docs/migration/: cli-entrypoint-deprecations.md
docs/plans/: 2026-01-28-fmri-analysis-plotting-design.md  2026-02-22-repo-organization-hardening.md  2026-03-17-import-and-metadata-hardening.md  2026-03-17-production-hardening.md
eeg_pipeline/: 01_erp_contrast_analysis.py  02_feature_extraction.py  03_tfr_topography_pipeline.py  04_behavior_correlation_analysis.py  __init__.py  __main__.py  exceptions.py  types.py
eeg_pipeline/analysis/: __init__.py  behavior.py  decoding.py  feature_extraction.py  group_aggregation.py
eeg_pipeline/cli/: __init__.py  behavior.py  commands.py  common.py  decoding.py  erp.py  features.py  main.py  preprocessing.py  progress.py  tfr.py
eeg_pipeline/context/: __init__.py  behavior.py  features.py  visualization.py
eeg_pipeline/docker_setup/: Dockerfile.freesurfer-mne
fmri_pipeline/: 00_resample_siips1_to_nps_grid.py  01_prepare_data.py  02_prepare_glm_inputs.py  03_first_level_glm.py  04_score_signatures.py  05_metrics_and_stats.py  06_visualization.py  07_qc_collation.py  README.md  __init__.py  run_full_pipeline.py
machine_learning/: eeg_to_signature_deep_models.py  run_all_models.py
models/: baseline.py  cnn.py  covariance.py  graph.py  svm_rbf.py
paradigm-specific-scripts/: README.md  fmri_raw_to_bids.py  merge_psychopy.py  run_paradigm_specific.py
plotting/tfr/: qc.py  (+3 more)
preprocessing/: merge_behavior_to_events.py
scripts/: README.md  eeg_raw_to_bids.py  fetch_templateflow_atlas.py  fix_fmri_bids_outputs.py  fix_restart_trial_triggers.py  gcp.sh  merge_psychopy.py  tui_pipeline_smoke.py
tests/: README.md  __init__.py  pipelines_test_utils.py  test_behavior_analysis_validity_fixes.py  test_behavior_correlations.py  test_behavior_validity_fixes.py  test_cli_features_complexity_overrides.py  test_cli_features_connectivity_dynamic_overrides.py  test_cli_features_erds_overrides.py  test_cli_info_discover_trial_table.py  test_cli_machine_learning_require_trial_safe.py  test_cli_tui_wiring_overrides.py  test_config_loader_paths.py  test_config_runtime_overrides.py  test_confounds_selection.py  test_contrast_builder_stim_phase_scoping.py  test_decoding_cv.py  test_dependency_source_of_truth.py  test_domain_utils.py  test_dose_response_trial_table_loading.py  test_feature_aperiodic_periodic_peaks.py  test_feature_api_precomputed_microstates_context.py  test_feature_connectivity_dynamic.py  test_feature_connectivity_validity_guards.py  test_feature_erds_pain_markers.py  test_feature_extraction.py  test_feature_microstates.py  test_feature_pac_surrogates.py  test_feature_pipeline_regressions.py  test_feature_provenance.py  test_feature_scientific_validity_guards.py  test_feature_scientific_validity_issues.py  test_feature_source_connectivity_validity.py  test_features.py  test_fmri_analysis_cli_signature_scope_wiring.py  test_fmri_analysis_cli_stim_phases_to_model_wiring.py  test_fmri_bold_discovery_utils.py  test_fmri_events_raw_to_bids_validation.py  test_fmri_events_selection.py  test_fmri_plotting_config.py  (+32 more)
utils/: cv_utils.py  data_loading.py  feature_utils.py  metrics.py  ml_config.yaml  permutation.py
(+886 files in other folders)
