[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-pipeline"
version = "0.0.0"
description = "EEG analysis pipeline for pain research"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
eeg-pipeline = "eeg_pipeline.cli.main:main"

[tool.setuptools]
packages = ["eeg_pipeline"]

[tool.setuptools.package-data]
eeg_pipeline = ["plotting/plot_catalog.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
