[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-pipeline"
version = "1.0.0"
description = "Modular EEG–fMRI analysis pipeline for thermal pain research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Joshua Duque"},
]
keywords = ["eeg", "fmri", "bids", "mne", "pain", "neuroscience", "preprocessing", "machine-learning"]
dependencies = [
    "antropy>=0.1.9",
    "bctpy>=0.6.1",
    "h5io>=0.1.0",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "mne>=1.9.0",
    "mne-bids>=0.16.0",
    "mne-connectivity>=0.7.0",
    "mne-icalabel>=0.7.0",
    "networkx>=3.5",
    "nibabel>=3.2.0,<6.0.0",
    "nilearn>=0.11.1",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.3.0",
    "pyarrow>=17.0.0",
    "pybv>=0.7.5",
    "pyprep>=0.4.3",
    "pyyaml>=6.0,<7.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "shap>=0.40.0",
    "specparam>=2.0.0rc3",
    "statsmodels>=0.13.0,<1.0.0",
    "sympy>=1.14.0",
    "mne-bids-pipeline>=1.9.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Repository = "https://github.com/JoshuaDuq/PAIN_EEG_fMRI"

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "pre-commit>=4.0.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]
ml = [
    "torch>=2.7.1",
]

[project.scripts]
eeg-pipeline = "eeg_pipeline.cli.main:main"

[tool.setuptools.packages.find]
include = ["eeg_pipeline*", "fmri_pipeline*"]
namespaces = true

[tool.setuptools.package-data]
eeg_pipeline = ["plotting/plot_catalog.json", "utils/config/*.yaml", "licenses/*.txt"]
fmri_pipeline = ["utils/config/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203"]
